Archive2/20/34391c66a8fd93/output
main.cpp: In function 'int main()':
main.cpp:27:5: error: expected '}' at end of input
     }
     ^
